# food-manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  calculate.cpp  constructor.cpp  constructor.h  constructor.ui  course_db.db  mainwindow.cpp  recipe.cpp  recipe.h  recipe.ui  register.cpp  register.h  register.ui  welcome.cpp  welcome.ui
.build/: CMakeCache.txt  Makefile  calculate  cmake_install.cmake  compile_commands.json
.build/.cmake/api/v1/reply/: cache-v2-ea24ca66e78b95df13d5.json  cmakeFiles-v1-dbeeb0f582ceb3a56f38.json  codemodel-v2-f453e9accd999ed31af1.json  index-2022-12-07T13-17-59-0624.json  target-calculate-Debug-fd84913e2d2789cf6e05.json
Course_work/: CMakeLists.txt  constructor.cpp  constructor.h  constructor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipe.h  recipe.ui  register.ui  welcome.cpp  welcome.h
drufts/: generator.cpp
forms/: register.ui
include/: constructor.h  mainwindow.h  recipe.h  register.h
src/: mainwindow.cpp  recipe.cpp  register.cpp
src/src/: course_db.db
